test/src/e2e_vm_tests/test_programs/should_fail/invalid_method_call_param/src/main.sw
script;

abi MyContract {
    fn test_function();
}

fn main() {
    let caller = abi(MyContract, 0x0000000000000000000000000000000000000000000000000000000000000000);
    caller.test_function {
        wrong_call_param: 0 // Invalid call parameter
    } ();
}